--- a/best4u-portal/pom.xml
+++ b/best4u-portal/pom.xml
@@ -4,12 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.3</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.best4u</groupId>
+		<artifactId>best4u</artifactId>
+		<version>1.0</version>
 	</parent>
-	<groupId>com.best4u</groupId>
+	<groupId>com.best4u.portal</groupId>
 	<artifactId>best4u-portal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>best4u-portal</name>
@@ -63,6 +62,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.0.5</version>
 			</plugin>
 		</plugins>
 	</build>
