--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
-    <artifactId>best4u</artifactId>
-    <version>0.1.0</version>
-    <packaging>pom</packaging>
+	<groupId>com.best4u</groupId>
+	<artifactId>best4u</artifactId>
+	<version>1.0</version>
+	<packaging>pom</packaging>
+	<description>BackEnd</description>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<timestamp>${maven.build.timtimestamp}</timestamp>
+		<maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
+	</properties>
 
-    <modules>
-        <module>best4u-gateway</module>
-        <module>best4u-portal</module>
-        <module>best4u-configuration</module>
-    </modules>
+	<modules>
+		<module>best4u-gateway</module>
+		<module>best4u-portal</module>
+		<module>best4u-configuration</module>
+		<module>best4u-eureka</module>
+	</modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>3.0.5</version>
+				<type>
+					pom
+				</type>
+
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 </project>
