--- a/best4u-portal/pom.xml
+++ b/best4u-portal/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>best4u-portal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>best4u-portal</name>
-	<description>Backend for Best4u</description>
+	<description>Backend for Best4u Portal</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
