--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 		<module>best4u-configuration</module>
 		<module>best4u-eureka</module>
 		<module>best4u-product</module>
+		<module>best4u-common</module>
+		<module>best4u-domain</module>
 	</modules>
 
 	<dependencyManagement>
